# formality-evaluator

./: .gitignore  README.md  documentation.md  generate_gpt_data.py  gyafc_generate.py  prepare_datasets.py  pyproject.toml  report.md
data/: gpt_generated.txt  gyafc.txt
evaluate/: run_finetune.py  run_similarity.py
evaluate/scripts/: ft.sh  sim.sh
evaluate/utils/: data.py  get_embeddings.py  model.py  test_utils.py
results/finetune/gpt_generated/gte-large-en-v1.5/: finetune_results.txt
results/finetune/gyafc/KaLM-embedding-multilingual-mini-instruct-v1/: finetune_results.txt
results/finetune/gyafc/bert-base-uncased/: finetune_results.txt
results/finetune/gyafc/gte-large-en-v1.5/: finetune_results.txt
results/finetune/gyafc/stella_en_400M_v5/: finetune_results.txt
results/finetune/reddit_enron_combined/KaLM-embedding-multilingual-mini-instruct-v1/: finetune_results.txt
results/finetune/reddit_enron_combined/gte-large-en-v1.5/: finetune_results.txt
results/finetune/reddit_enron_combined/stella_en_400M_v5/: finetune_results.txt
results/similarity/gpt_generated/KaLM-embedding-multilingual-mini-instruct-v1/: similarity_results.txt
results/similarity/gpt_generated/distilbert-base-uncased/: similarity_results.txt
results/similarity/gpt_generated/gte-large-en-v1.5/: similarity_results.txt
results/similarity/gpt_generated/stella_en_400M_v5/: similarity_results.txt
results/similarity/gyafc/KaLM-embedding-multilingual-mini-instruct-v1/: similarity_results.txt
results/similarity/gyafc/distilbert-base-uncased/: similarity_results.txt
(+2 files in other folders)
